--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           </nav><!-- .nav-menu -->
 
           <!--El acceso, login y registro-->
-          <a href="#" class="get-started-btn scrollto" data-toggle="modal" data-target="#ventanamodal">Acceder</a>
+          <a href="#" class="get-started-btn scrollto" data-toggle="modal"
+            data-target="#ventanamodal">Login/Registro</a>
           <!--El modal se realizó después del footer-->
         </div>
       </div>
